<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".CreateEvent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="227dp"
        android:layout_height="204dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_icon" />

    <EditText
        android:id="@+id/create_event_name"
        android:layout_width="233dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="Event Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <DatePicker
        android:id="@+id/create_datepicker"
        android:layout_width="246dp"
        android:layout_height="87dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_description" />

    <Button
        android:id="@+id/create_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:text="Next"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_timepicker" />

    <EditText
        android:id="@+id/create_description"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Event Description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_radius" />

    <TimePicker
        android:id="@+id/create_timepicker"
        android:layout_width="269dp"
        android:layout_height="66dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_datepicker" />

    <EditText
        android:id="@+id/create_radius"
        android:layout_width="228dp"
        android:layout_height="44dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="Geofence Radius in Miles"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_name" />
</androidx.constraintlayout.widget.ConstraintLayout>