...
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_textview" />

    <Button
        android:id="@+id/publisher_button"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_rounded"
        android:text="Publisher"
        android:textColor="#ffffff"
...
