...
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publisher_main_page_building">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEvents"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <Button
...
        android:text="Logout"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/btn_rounded"
...
