<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".EditEvent">

    <View
        android:id="@+id/view"
        android:layout_width="298dp"
        android:layout_height="328dp"
        android:layout_marginTop="20dp"
        android:background="@color/background_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Event Name"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/edit_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_icon" />

    <TextView
        android:id="@+id/edit_event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:text="Event Time"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/edit_time_tv"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_date" />

    <TextView
        android:id="@+id/edit_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:text="Event Date"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/edit_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_name" />

    <TextView
        android:id="@+id/edit_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="19dp"
        android:text="Event Description"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/edit_description_tv"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_time" />

    <ImageView
        android:id="@+id/edit_event_icon"
        android:layout_width="118dp"
        android:layout_height="111dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/googleg_standard_color_18" />

    <Button
        android:id="@+id/unpublish_button"
        android:layout_width="153dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:text="Unpublish"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_button" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="153dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="128dp"
        android:background="@drawable/btn_rounded"
        android:text="Delete"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/edit_page_edit_button"
        android:layout_width="153dp"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_rounded"
        android:text="Edit"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unpublish_button" />

    <TextView
        android:id="@+id/edit_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Event Name:"
        android:textColor="#990000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_icon" />

    <TextView
        android:id="@+id/edit_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="Event Date:"
        android:textColor="#990000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_tv" />

    <TextView
        android:id="@+id/edit_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="Event Time:"
        android:textColor="#990000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_tv" />

    <TextView
        android:id="@+id/edit_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="Event Description:"
        android:textColor="#990000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_time_tv" />

    <TextView
        android:id="@+id/edit_radius_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="Event Radius:"
        android:textColor="#990000"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/edit_description_tv" />

    <TextView
        android:id="@+id/edit_event_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="19dp"
        android:text="Event Radius"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/edit_radius_tv"
        app:layout_constraintTop_toBottomOf="@+id/edit_event_description" />

</androidx.constraintlayout.widget.ConstraintLayout>